--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,7 +5,7 @@ branches:
     - master
 cache: node_modules
 install:
-  - nmp install
+  - npm install
 build: off
 test_script:
   - npm run lint && npm test      
